# huffman

./: CMakeLists.txt
console/: file_compressor.cpp  file_compressor.h  file_decompressor.cpp  file_decompressor.h  file_reader.cpp  file_reader.h  file_writer.cpp  file_writer.h  main.cpp
lib/: counter.cpp  decoder.cpp  encoded_bytes.cpp  encoder.cpp  huffman_tree.cpp
lib/headers/: consts.h  counter.h  decoder.h  encoded_bytes.h  encoder.h  huffman_tree.h
tester/: tree_testing.cpp
tester/files/: 1MB  balance  bamboo  corrupt  kek.txt  out  out.txt  out1.txt
